Fix Android API compatibility issues in Codex auth flow
Agent-Logs-Url: https://github.com/tervem6istus/ShaderEditor/sessions/853e8ffb-14c7-4c31-b720-4f095de0ef23

Co-authored-by: tervem6istus <210146707+tervem6istus@users.noreply.github.com>